--- a/Checkout.html
+++ b/Checkout.html
@@ -77,7 +77,22 @@
       
         <section id="moduledoc">
           <p>Checkout module.
-Used to store and calculate user’s basket</p>
+Is an interface of API.
+It has several available methods:</p>
+<ul>
+<li>initialize basker
+</li>
+<li>add product
+</li>
+<li>remove product
+</li>
+<li>reset basket
+</li>
+<li>show basket
+</li>
+<li>show subtotal, total, discount
+</li>
+</ul>
 
         </section>
       
