--- a/api-reference.html
+++ b/api-reference.html
@@ -32,7 +32,7 @@
   <a href="api-reference.html" class="sidebar-projectLink">
     <div class="sidebar-projectDetails">
       <h1 class="sidebar-projectName">
-        cabify
+        checkout
       </h1>
       <h2 class="sidebar-projectVersion">
         v0.1.0
@@ -69,7 +69,7 @@
 
 
 <h1>
-  <small class="visible-xs">cabify v0.1.0</small>
+  <small class="visible-xs">checkout v0.1.0</small>
   API Reference
 </h1>
 
